--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "."
-  command = "./build-netlify.sh"
+  command = "chmod +x build-netlify.sh && ./build-netlify.sh"
   publish = "dist"
 
 [dev]
