--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,13 @@
 [build]
   base = "."
   command = "chmod +x build-netlify.sh && ./build-netlify.sh"
-  publish = "dist"
+  publish = "dist/public"
 
 [dev]
   command = "npm run dev"
   port = 3000
   targetPort = 3000
-  publish = "dist"
+  publish = "dist/public"
   framework = "#custom"
 
 [[redirects]]
